Added FAQ for Java 9 or higher